--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.6"
