--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.8.1",
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
