--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
+    "lottie-react": "^2.4.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
